--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "d3-scale": "^4.0.2",
+    "depcheck": "^1.4.7",
     "immer": "^10.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "styled-components": "^6.1.11",
     "styled-reset": "^4.5.2",
     "uuid": "^9.0.1",
     "zustand": "^4.5.2"
