--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.44.0",
+    "@tanstack/react-query-devtools": "^5.44.0",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "d3-scale": "^4.0.2",
