--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json": "json-server --watch db.json --port 3000"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.44.0",
@@ -18,6 +19,7 @@
     "d3-scale": "^4.0.2",
     "depcheck": "^1.4.7",
     "immer": "^10.1.1",
+    "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
